<resources>
    <string name="app_name">文阅</string>
    <string name="action_main">设置</string>

    <!--主界面的菜单-->
    <string name="main_book">图书阅读器</string>
    <string name="main_code">代码阅读器</string>
    <string name="main_rss">RSS阅读器</string>
    <string name="main_welfare">福利</string>
    <string name="main_music">音乐</string>
    <string name="main_weather">天气预报</string>
    <string name="main_funny">搞笑段子</string>

    <string-array name="main_names">
        <item>图书阅读器</item>
        <item>代码阅读器</item>
        <item>RSS阅读器</item>
        <item>福利</item>
        <item>音乐</item>
        <item>天气预报</item>
        <item>搞笑段子</item>
    </string-array>
    <!--侧滑菜单-->
    <string name="ic_menu_home">主界面</string>
    <string name="ic_menu_book">小说阅读</string>
    <string name="ic_menu_code">代码阅读器</string>
    <string name="ic_menu_rss">RSS阅读器</string>
    <string name="ic_menu_music">音乐</string>
    <string name="ic_menu_weather">天气</string>
    <string name="ic_menu_welfare">福利</string>
    <string name="ic_menu_funny">搞笑段子</string>

    <!--小说阅读的action menu菜单-->
    <string name="book_action_login">登录</string>
    <string name="book_action_sync">同步书架</string>
    <string name="book_action_local">扫描本地书籍</string>
    <string name="book_action_wifi_book">WIFI传书</string>
    <string name="book_action_night">夜间模式</string>
    <string name="book_action_feedback">反馈建议</string>
    <string name="book_action_setting">设置</string>
    <array name="book_tabs">
        <item>书架</item>
        <item>发现</item>
    </array>
    <string name="title_activity_book">BookActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="book_search">搜索</string>
    <string name="remove_selected_book">移除所选书籍</string>
    <string name="delete_local_cache">同时删除本地缓存</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="cancel_selected_all">取消全选</string>
    <string name="selected_all">全选</string>
    <string name="has_not_selected_delete_book">你没有选择要删的书哦</string>
    <!--搜索相关-->
    <string name="search">搜索</string>
    <string name="search_hot_search">大家都在搜</string>
    <string name="search_change_a_lot">换一批</string>
    <string name="search_result_lately_follower">"%1$d人在追 |&#160;"</string>
    <string name="search_result_retention_ratio">"%1$s%%读者留存 |&#160;"</string>
    <string name="search_result_author">%1$s著</string>
    <!--排行榜-->
    <string name="sub_ran_cate_msg">%1$d人在追 |&#160; %2$s%%读者留存</string>

    <string-array name="sub_rank_tabs">
        <item>周榜</item>
        <item>月榜</item>
        <item>总榜</item>
    </string-array>

    <!--书籍详情相关-->
    <string name="add_tag">Add Tag</string>
    <string name="book_detail">书籍详情</string>
    <string name="book_detail_author">%1$s</string>
    <string name="book_detail_category"> &#160;|&#160;%1$s |&#160;</string>
    <string name="book_detail_user_lv">&#160;lv.%1$d</string>
    <string name="book_detail_remove_collection">不追了</string>
    <string name="book_detail_join_collection">追更新</string>
    <string name="book_detail_start_read">开始阅读</string>
    <string name="book_detail_retention_ratio">%1$s%%</string>
    <string name="book_detail_hot_reviews">热门书评</string>
    <string name="book_detail_community">%1$s的社区</string>
    <string name="book_detail_post_count">共有%1$d个帖子</string>
    <string name="book_detail_recommend_book_list">推荐书单</string>
    <string name="book_detail_recommend_book_list_book_count">共%1$d本书 |&#160;</string>
    <string name="book_detail_recommend_book_list_collector_count">%1$d人收藏</string>
    <string name="book_detail_is_joined_the_book_shelf">是否将《%1$s》加入书架</string>
    <string name="book_detail_has_joined_the_book_shelf">《%1$s》成功加入书架</string>
    <string name="book_detail_has_remove_the_book_shelf">已移除《%1$s》</string>

    <!--主题书单相关-->
    <string name="subject_book_list">主题书单</string>
    <string name="subject_book_list_my_book_list">我的书单</string>
    <string name="subject_book_list_detail">书单详情</string>
    <string name="subject_book_list_detail_book_lately_follower">%1$d&#160;人在追</string>
    <string name="subject_book_list_detail_book_word_count">|&#160;%1$d&#160;万字</string>

    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <!--小说分类相关-->
    <string name="top_cate_male">男生</string>
    <string name="top_cate_female">女生</string>
    <string name="category_book_count">%1$d本</string>
    <!--阅读页面相关-->
    <string name="book_read_reading">朗读</string>
    <string name="book_read_community">社区</string>
    <string name="book_read_change_source">换源</string>
    <string name="book_read_introduce">简介</string>
    <string name="book_read_mode_day">夜间</string>
    <string name="book_read_mode_day_manual_setting">日间</string>
    <string name="book_read_mode_night_manual_setting">夜间</string>
    <string name="book_read_feedback">反馈</string>
    <string name="book_read_settings">设置</string>
    <string name="book_read_download">缓存</string>
    <string name="book_read_mark">书签</string>
    <string name="book_read_toc">目录</string>
    <string name="add_bookmark">新增书签</string>
    <string name="manage_bookmark">管理</string>
    <string name="clear_bookmark">清除</string>
    <string name="book_read_download_error">网络异常，已取消下载</string>
    <string name="book_read_download_complete">缓存完成，失败%1$d章</string>
    <string name="book_read_already_download">已缓存过:%1$s(%2$d/%3$d)...</string>
    <string name="book_read_download_progress">正在缓存:%1$s(%2$d/%3$d)...</string>
    <string name="net_error">网络异常</string>
    <string name="book_read_add_book">添书</string>
    <string name="book_read_would_you_like_to_add_this_to_the_book_shelf">是否将本书加入书架？</string>
    <string name="book_read_join_the_book_shelf">加入书架</string>
    <string name="book_read_not">不用了</string>
    <string name="to_add">去添加</string>
    <string name="empty_shelf">您的书架还是空的，快去添加小说吧！</string>
    <string name="to_add_books">您的书架还没有小说，快去添加吧！</string>
    <string name="activity_add_package">添加</string>



    <!--code reader-->
    <!-- empty -->
    <string name="empty_main_repo">Haven\'t opened file!You can open by bottom button</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="book_resource_title">选择来源</string>
    
    <!--搞笑段子-->
    <string name="fun_list_item_count">%1$d&#160;评论·%2$d&#160;分享</string>
    <string name="fun_list_item_comment_user">%1$s&#160;：</string>
    <!--搞笑段子-->

    <!--福利-->
    <string name="menu_welfare_gank_io">干货妹纸</string>
    <string name="menu_welfare_meizi">妹子图</string>
    <string name="menu_welfare_tao">淘女郎</string>
    <string name="menu_welfare_douban">豆瓣妹纸</string>
    <string name="menu_welfare_huaban">花瓣妹纸</string>
    <string name="menu_welfare_jiandan">煎蛋妹纸</string>
    <string name="cancel_top">取消置顶</string>
    <!--福利-->
    
</resources>
