<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_welfare_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/ic_menu_home"/>
        <item
            android:checkable="false"
            android:title="@string/ic_menu_welfare">
            <menu>
                <item
                    android:id="@+id/nav_welfare_gank_io"
                    android:checkable="false"
                    android:title="@string/menu_welfare_gank_io"/>
                <item
                    android:id="@+id/nav_welfare_meizi"
                    android:checkable="false"
                    android:title="@string/menu_welfare_meizi"/>
                <item
                    android:id="@+id/nav_welfare_tao"
                    android:checkable="false"
                    android:title="@string/menu_welfare_tao"/>
                <item
                    android:id="@+id/nav_welfare_douban"
                    android:checkable="false"
                    android:title="@string/menu_welfare_douban"/>
                <item
                    android:id="@+id/nav_welfare_huaban"
                    android:checkable="false"
                    android:title="@string/menu_welfare_huaban"/>
                <item
                    android:id="@+id/nav_welfare_jiandan"
                    android:checkable="false"
                    android:title="@string/menu_welfare_jiandan"/>
            </menu>
        </item>
    </group>
    <item android:title="功能模块">
        <menu>
            <item
                android:id="@+id/nav_welfare_book"
                android:icon="@drawable/ic_menu_book"
                android:title="@string/ic_menu_book"/>
            <item
                android:id="@+id/nav_welfare_code"
                android:icon="@drawable/ic_menu_code"
                android:title="@string/ic_menu_code"/>
            <item
                android:id="@+id/nav_welfare_rss"
                android:icon="@drawable/ic_menu_rss"
                android:title="@string/ic_menu_rss"/>
            <item
                android:id="@+id/nav_welfare_music"
                android:icon="@drawable/ic_menu_music"
                android:title="@string/ic_menu_music"/>
            <item
                android:id="@+id/nav_welfare_weather"
                android:icon="@drawable/ic_menu_weather"
                android:title="@string/ic_menu_weather"/>

            <item
                android:id="@+id/nav_welfare_funny"
                android:icon="@drawable/ic_menu_funny"
                android:title="@string/ic_menu_funny"/>
        </menu>
    </item>
</menu>