<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/book_action_search"
        android:icon="@drawable/main_search"
        android:orderInCategory="80"
        android:title="@string/book_search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/book_action_login"
        android:icon="@drawable/book_action_login"
        android:orderInCategory="100"
        android:title="@string/book_action_login"
        app:showAsAction="never"/>
    <item
        android:id="@+id/book_action_sync"
        android:icon="@drawable/book_action_sync"
        android:orderInCategory="100"
        android:title="@string/book_action_sync"
        app:showAsAction="never"/>
    <item
        android:id="@+id/book_action_scan_local"
        android:icon="@drawable/book_action_scan_local"
        android:orderInCategory="100"
        android:title="@string/book_action_local"
        app:showAsAction="never"/>
    <item
        android:id="@+id/book_action_wifi_book"
        android:icon="@drawable/book_action_wifi_book"
        android:orderInCategory="100"
        android:title="@string/book_action_wifi_book"
        app:showAsAction="never"/>
    <item
        android:id="@+id/book_action_night"
        android:icon="@drawable/book_action_night"
        android:orderInCategory="100"
        android:title="@string/book_action_night"
        app:showAsAction="never"/>
    <item
        android:id="@+id/book_action_feedback"
        android:icon="@drawable/book_action_feedback"
        android:orderInCategory="100"
        android:title="@string/book_action_feedback"
        app:showAsAction="never"/>
    <item
        android:id="@+id/book_action_setting"
        android:icon="@drawable/book_action_setting"
        android:orderInCategory="100"
        android:title="@string/book_action_setting"
        app:showAsAction="never"/>
</menu>
