<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.article.core.book.ui.activity.BookDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/book_detail_tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"
        app:theme="@style/Theme.ToolBar.Menu"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/book_detail_cover_iv"
                    android:layout_width="55dp"
                    android:layout_height="75dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cover_default"/>

                <TextView
                    android:id="@+id/book_detail_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="10dp"
                    android:layout_toRightOf="@+id/book_detail_cover_iv"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/common_h1"
                    android:textSize="16sp"
                    tools:text="武侠世界自由行"/>

                <TextView
                    android:id="@+id/book_detail_author_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/book_detail_title_tv"
                    android:layout_toRightOf="@+id/book_detail_cover_iv"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/orange"
                    android:textSize="13sp"
                    tools:text="w风雪 | "/>

                <TextView
                    android:id="@+id/book_detail_category_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/book_detail_title_tv"
                    android:layout_toRightOf="@id/book_detail_author_iv"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/common_h2"
                    android:textSize="13sp"
                    tools:text="仙侠 | "/>

                <TextView
                    android:id="@+id/book_detail_word_count_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/book_detail_title_tv"
                    android:layout_toRightOf="@id/book_detail_category_tv"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/common_h2"
                    android:textSize="13sp"
                    tools:text="594万字"/>

                <TextView
                    android:id="@+id/book_detail_later_update_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/book_detail_author_iv"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/book_detail_cover_iv"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/common_h2"
                    android:textSize="13sp"
                    tools:text="4月前"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/book_detail_later_update_tv"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <com.article.widget.DrawableCenterButton
                        android:id="@+id/book_detail_join_collection_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/shape_common_btn_solid_selector"
                        android:clickable="true"
                        android:drawableLeft="@drawable/book_detail_info_add_img"
                        android:drawablePadding="5dp"
                        android:padding="10dp"
                        android:text="@string/book_detail_join_collection"
                        android:textColor="@color/white"/>

                    <com.article.widget.DrawableCenterButton
                        android:id="@+id/book_detail_read_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/shape_common_btn_solid_selector"
                        android:clickable="true"
                        android:drawableLeft="@drawable/book_detail_info_search_img"
                        android:drawablePadding="5dp"
                        android:padding="10dp"
                        android:text="@string/book_detail_start_read"
                        android:textColor="@color/white"/>
                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/common_divider_narrow"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="追书人数"
                        android:textColor="@color/common_h2"
                        android:textSize="13sp"/>

                    <TextView
                        android:id="@+id/book_detail_lately_follower_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/common_h1"
                        android:textSize="15sp"
                        tools:text="82"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="读者留存率"
                        android:textColor="@color/common_h2"
                        android:textSize="13sp"/>

                    <TextView
                        android:id="@+id/book_detail_retention_ratio_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/common_h1"
                        android:textSize="15sp"
                        tools:text="20.29%"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="日更新字数"
                        android:textColor="@color/common_h2"
                        android:textSize="13sp"/>

                    <TextView
                        android:id="@+id/book_detail_serialize_word_count_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/common_h1"
                        android:textSize="15sp"
                        tools:text="4614"/>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_margin="10dp"
                android:background="@color/common_divider_narrow"/>

            <com.article.widget.TagGroup
                android:id="@+id/book_detail_tag_tg"
                style="@style/TagGroup"
                android:layout_width="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_margin="10dp"
                android:background="@color/common_divider_narrow"/>

            <TextView
                android:id="@+id/book_detail_long_intro_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:ellipsize="end"
                android:maxLines="4"
                android:padding="15dp"
                android:text="一念成沧海，一念化桑田。一念斩千魔，一念诛万仙。唯我念……永恒"
                android:textColor="@color/common_h1"
                android:textSize="15sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/common_divider_wide"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/book_detail_recommend_book_list_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/book_detail_recommend_book_list"
                    android:textColor="@color/common_h1"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/book_detail_more_list_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="15dp"
                    android:text="更多"
                    android:textColor="@color/common_h2"
                    android:textSize="15sp"/>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_margin="10dp"
                android:background="@color/common_divider_narrow"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/book_detail_recommend_book_list_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
